[project]
name = "ocean-data-sources"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "cartopy>=0.25.0",
    "cdsapi>=0.7.7",
    "cfgrib>=0.9.15.1",
    "eccodes>=2.45.0",
    "fsspec>=2026.1.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "xarray>=2026.1.0",
]
